--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -45,8 +45,33 @@ opacity:1;
 .server{width: 100%;display: flex;flex-flow: wrap;justify-content: space-around;background-color:  #FFFFFF;}
 .server .content_serve{width:28%;height:180rpx;text-align: center;border:1px solid #C1C1C1;font-size: 26rpx;margin-top: 20rpx;padding-top: 15rpx;position: relative;}
 .server .content_serve image{width: 100%;height: 150rpx;border:0;outline: 0;margin-top: 10rpx;}
-.index_bg{width:100%;height:650rpx;position: relative;text-align: center;}
+.index_bg{width:100%;height:800rpx;position: relative;text-align: center;}
+.index_bg .index_timfont{width: 100%;box-sizing: border-box;padding: 15rpx;position: absolute;top:140rpx;font-size: 24rpx;color: rgb(102, 102, 102);height: 300rpx;}
 .index_bg .index_img{width:100%;z-index: -1;height:inherit;position: relative;}
-.indw_title{position: absolute;top:40rpx;left:50%;transform: translateX(-50%);font-size: 40rpx;}
-.index_bg .index_titlefont{width:100%;height: 200rpx;display: flex;justify-content: space-around;}
+.indw_title{position: absolute;top:60rpx;left:50%;transform: translateX(-50%);font-size: 40rpx;}
+.index_bg .index_titlefont{width:100%;height: 200rpx;display: flex;justify-content: space-around;position: absolute;bottom: -50rpx;overflow: hidden;}
 .index_bg .index_titlefont .indw_font{width: 20%;}
+.index_bg .index_titlefont .indw_font .font_one{font-size:50rpx;color: white;font-weight: bolder;}
+.index_bg .index_titlefont .indw_font .font_two{font-size: 25rpx;color: white;}
+.appointment_kt{width:100%;margin-top: 20rpx;border-bottom: 1rpx solid #d9d9d9;padding-bottom: 25rpx;}
+.appointment_kt .tment_kt{width:50%;display: flex;justify-content:center;align-items:center;margin: 0 auto;margin-top: 20rpx;}
+.appointment_kt .tment_kt .tehengxian{width:20rpx;height: 2rpx;background-color: #d9d9d9;}
+.appointment_kt .tment_kt .tehencolor{color: #353535;font-size: 32rpx;margin-left:20rpx;margin-right:20rpx;}
+.appointment_kt .usermsg{padding: 0 25rpx 0 25rpx;}
+.usermsg .user_inctont{height: 50rpx;line-height: 50rpx;margin-bottom: 10rpx;margin-top: 10rpx;}
+.appointment_kt .usermsg .textred{color:red;vertical-align: -5rpx;}
+.appointment_kt .usermsg .text_contacts{font-size: 28rpx;}
+.appointment_kt .usermsg .user_uame{background-color: #f7f7f7;height: 50rpx;line-height: 50rpx;width: 100%;padding-top: 20rpx;padding-bottom: 20rpx;padding-left: 15rpx;}
+.user_morenname{font-size: 30rpx;}
+.serverradio{display: flex;width: 100%;flex-flow:wrap;}
+.radioone{font-size: 30rpx;margin-right: 20rpx;margin-bottom: 15rpx;}
+.textarea-wrp {
+  padding: 0 25rpx;
+  background-color: #f7f7f7;
+  font-size: 30rpx;
+  margin-bottom: 30rpx;
+}
+.Service_case{width: 100%;display: flex;justify-content: space-around;flex-flow: wrap;}
+.Service_case .service_item{width:45%;margin-top: 30rpx;}
+.Service_case .service_item image{width:100%;height:  200rpx;border-radius: 10rpx;}
+.Service_case .service_item .service_text{font-size: 30rpx;}
