--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -24,6 +24,7 @@ page {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding-bottom:60px;
 }
 
 .userinfo, .uploader, .tunnel {
