--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -1,4 +1,3 @@
-<!--pages/me/me.wxml-->
+<!--pages/onlineRepairs/onlineRepairs.wxml-->
 <text>pages/me/me.wxml</text>
 
-<view><button>点击显示图片</button></view>
