--- a/miniprogram/pages/me/me.wxss
+++ b/miniprogram/pages/me/me.wxss
@@ -1,1 +1,235 @@
 /* pages/me/me.wxss */
+
+.user-detail {
+    height: 100%;
+    background-color: #f5f5f5;
+    color: #353535;
+    position: relative;
+    font-size:28rpx;
+}
+.user-detail .user-header {
+    width: 120%;
+    height: 160px;
+    background: #d12f3a;
+    position: relative;
+    left: -10%;
+    border-bottom-left-radius: 45%;
+    border-bottom-right-radius: 45%;
+    overflow: hidden;
+    text-align: center;
+    cursor: pointer;
+}
+.user-header{
+  background-color: rgb(86, 187, 55) !important;
+}
+.user-detail .head-icon-wrap {
+    width: 120rpx;
+    height: 120rpx;
+    border-radius: 50%;
+    border: 4rpx solid rgba(255,255,255,.5);
+    margin: 40rpx auto 20rpx;
+    overflow: hidden;
+}
+.user-detail .user-name {
+    color: #fff;
+}
+.user-detail .user-container {
+    position: relative;
+    top: -35px;
+    margin-bottom: -35px;
+}
+
+.user-detail .info-wrapper {
+    width: 320px;
+    margin: 0 auto;
+    border-radius: 4px;
+}
+
+.user-detail .info-detail-item {
+    padding: 0 15px;
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 0 8px 0 rgba(0,0,0,.03);
+    overflow: hidden;
+}
+.user-detail .all-order {
+    height: 44px;
+    line-height: 44px;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    cursor: pointer;
+}
+.user-detail .all-order:after {
+    content: '';
+    width: 7px;
+    height: 12px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat -588px -192px;
+}
+.user-detail .order-status-wrap {
+    margin: 15px 0 10px;
+    display: flex;
+    justify-content: space-around;
+}
+.user-detail .order-status {
+    font-size: 12px;
+    color: #666;
+    position: relative;
+    cursor: pointer;
+}
+.user-detail .status-icon {
+  width: 25px;
+  height: 25px;
+  display: block;
+  margin: 0 auto 4px;
+  background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+  background-color: rgb(86, 187, 55);
+}
+.user-detail .wait-pay {
+    background-position: -707px -226px;
+}
+.user-detail .order-underway {
+    background-position: -747px -153px;
+}
+.user-detail .order-complete {
+    background-position: -707px -269px;
+}
+.user-detail .order-cancel {
+    background-position: -707px -312px;
+}
+
+.user-detail .tip-bubble {
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    position: absolute;
+    top: -9px;
+    right: -3px;
+    border-radius: 50%;
+    border: 1px solid red;
+    text-align: center;
+    background: #fff;
+    border-color: rgb(86, 187, 55);
+    color: rgb(86, 187, 55);
+}
+
+.user-detail .message-header {
+    height: 45px;
+    line-height: 45px;
+}
+.user-detail .message-item {
+    padding-top: 14px;
+    margin-bottom: 14px;
+    font-size: 13px;
+    letter-spacing: .3px;
+    border-top: 1px solid #eee;
+}
+.user-detail .service-info {
+    height: 55px;
+    margin-bottom: 10px;
+    background-color: #f8f8f8;
+    overflow: hidden;
+}
+.user-detail .service-img-wrap {
+    width: 55px;
+    height: 100%;
+    margin-right: 10px;
+    float: left;
+    background: url(/images/icon/defaultIcon.png?v=201906051302) 0 -868px no-repeat;
+}
+.user-detail .service-name {
+    margin-top: 10px;
+}
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.user-detail .service-intro {
+    font-size: 12px;
+    margin-top: 4px;
+    color: #888;
+}
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.user-detail .view-more {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 12px;
+    color: #888;
+    cursor: pointer;
+}
+.user-detail .view-more:before {
+    content: '';
+    width: 11px;
+    height: 7px;
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+    background-position: -1203px 0;
+}
+
+
+.user-detail .user-info {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.user-detail .address, .user-detail .phone {
+    cursor: pointer;
+}
+.user-detail .info-item {
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.user-detail .item-icon {
+    width: 16px;
+    height: 16px;
+    margin-top: 2px;
+    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+    flex-shrink: 0;
+}
+.user-detail .address-icon {
+    background-position: -475px -192px;
+}
+.user-detail .phone-icon {
+    background-position: -502px -191px;
+}
+.user-detail .company-time-icon {
+    background-position: -530px -192px;
+}
+.user-detail .introduction-icon {
+    background-position: -557px -193px;
+}
+.user-detail .address .item-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.user-detail .item-text {
+    flex-grow: 1;
+    text-align: justify;
+    margin: 0 10px;
+    word-break: break-word;
+}
+.user-detail .address .dist {
+    margin-right: 10px;
+    color: #999;
+}
+.user-detail .more-icon {
+    width: 7px;
+    height: 12px;
+    background: red;
+    flex-shrink: 0;
+    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat -588px -192px;
+    margin-top: 4px;
+}
