--- a/miniprogram/pages/me/me.wxss
+++ b/miniprogram/pages/me/me.wxss
@@ -69,7 +69,7 @@
     top: 0;
     bottom: 0;
     margin: auto 0;
-    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat -588px -192px;
+    background: no-repeat -588px -192px;
 }
 .user-detail .order-status-wrap {
     margin: 15px 0 10px;
@@ -82,12 +82,13 @@
     position: relative;
     cursor: pointer;
 }
+
 .user-detail .status-icon {
   width: 25px;
   height: 25px;
   display: block;
   margin: 0 auto 4px;
-  background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+  background-repeat: no-repeat;
   background-color: rgb(86, 187, 55);
 }
 .user-detail .wait-pay {
@@ -140,7 +141,7 @@
     height: 100%;
     margin-right: 10px;
     float: left;
-    background: url(/images/icon/defaultIcon.png?v=201906051302) 0 -868px no-repeat;
+    background:0 -868px no-repeat;
 }
 .user-detail .service-name {
     margin-top: 10px;
@@ -167,14 +168,14 @@
     color: #888;
     cursor: pointer;
 }
-.user-detail .view-more:before {
+.user-detail .view-more .before {
     content: '';
     width: 11px;
     height: 7px;
     margin-right: 10px;
     display: inline-block;
     vertical-align: middle;
-    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+    background-repeat: no-repeat;
     background-position: -1203px 0;
 }
 
@@ -195,7 +196,7 @@
     width: 16px;
     height: 16px;
     margin-top: 2px;
-    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat;
+    background-repeat: no-repeat;
     flex-shrink: 0;
 }
 .user-detail .address-icon {
@@ -230,6 +231,11 @@
     height: 12px;
     background: red;
     flex-shrink: 0;
-    background: url(/images/icon/mbg01.png?v=201908141252) no-repeat -588px -192px;
+    background:no-repeat -588px -192px ;
     margin-top: 4px;
 }
+
+
+
+@import '/style/defaultIcon.wxss';
+@import '/style/mbg01.wxss';
