--- a/miniprogram/pages/onlineRepairs/onlineRepairs.wxss
+++ b/miniprogram/pages/onlineRepairs/onlineRepairs.wxss
@@ -1,1 +1,30 @@
 /* pages/onlineRepairs/onlineRepairs.wxss */
+/* 切换内容 */
+.content_tab{width:100%;}
+.content_tab .orderInfo{width:100%;}
+.tabNav{width:100%; height:80rpx; line-height: 80rpx; background: #fff; display: flex; padding:0 30rpx; border-bottom:1px solid #f5f5f5; box-sizing: border-box;}
+.tabNav> view{text-align: center; margin-right:50rpx;}
+.tabNav .mocolor{color:#000;font-size: 30rpx;}
+.tabNav> view:last-child{ margin-right: 0;}
+.tabNav> view text{padding:0 15rpx; height:75rpx; display:inline-block;}
+.tabNav .cur text{ border-bottom:5rpx solid rgb(86, 187, 55); color:#000;font-size: 30rpx;}
+.content_tab .orderInfo .orderInfo-item{width:100%;height: 360rpx;}
+.content_tab .orderInfo .orderInfo-item .crderconter{width:92%;margin: 0 auto;}
+.content_tab .orderInfo .orderInfo-item .crderconter .crder_img{margin: 0 auto;margin-top: 30rpx;}
+.content_tab .orderInfo .orderInfo-item .crderconter .crder_img image{height: 290rpx;border-radius: 10rpx;width: 100%;}
+.orderInfo .orderInfo-item .crderconter .crder_text{font-size: 32rpx;overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1; /*第三行显示 ...*/
+        -webkit-box-orient: vertical;}
+.orderInfo .orderInfo-item .crderconter .crder_subtext{font-size: 24rpx;color:#888;word-wrap: break-word;overflow: hidden;text-overflow: ellipsis; display: -webkit-box;
+        -webkit-line-clamp: 1; /*第三行显示 ...*/
+        -webkit-box-orient: vertical;margin-top: 10rpx;}
+.orderInfo .orderInfo-item .crderconter .crder_view{display: flex;margin-top:10rpx;position: relative;font-size: 32rpx;color:#989898;vertical-align: middle;}
+.orderInfo .orderInfo-item .crderconter .crder_view .crder_viewpicse{color:rgb(86, 187, 55);}
+.orderInfo .orderInfo-item .crderconter .crder_view .crder_viewsubp{font-size: 24rpx;text-decoration:line-through;margin-right: 20rpx;}
+.orderInfo .orderInfo-item .crderconter .crder_view .crder_yuyue{font-size: 26rpx;}
+.orderInfo .orderInfo-item .crderconter .crder_view .crder_msg{color:rgb(86, 187, 55);margin-right: 15rpx;}
+.orderInfo .orderInfo-item .crderconter .crder_view .crder_mianfei{color:rgb(86, 187, 55);margin-right: 15rpx;}
+/* 横线 */
+.tabNavhengxian{width:100%;height: 20rpx;background: #F0F0F0;}
