--- a/miniprogram/pages/onlineRepairs/onlineRepairs.wxml
+++ b/miniprogram/pages/onlineRepairs/onlineRepairs.wxml
@@ -13,7 +13,7 @@
              <!-- 开始服务一 -->
          <view class="crderconter">
           <navigator url="/pages/msgBoard/msgBoard" hover-class="navigator-hover">
-           <view class="crder_img"><image src="../../images/online/dianzi.jpg"></image></view>
+           <view class="crder_img"><image src="../../images/online/dianzi.jpg" mode="scaleToFill"></image></view>
            <view class="crder_text">手机电子维修，更换屏幕等手机电子维修</view>
            <view class="crder_subtext">专业工程师现场检测您的设备，并采取现场面对面的透明化维修模式，让您的设备不用返厂</view>
            <view class="crder_view">   <!--判断后台传数据1是默认，2是面议 3是免费 wx-if=""-->
@@ -28,7 +28,7 @@
                <!-- 开始服务一 -->
          <view class="crderconter">
           <navigator url="/pages/msgBoard/msgBoard" hover-class="navigator-hover">
-           <view class="crder_img"><image src="../../images/online/dianzi.jpg"></image></view>
+           <view class="crder_img"><image src="../../images/online/dianzi.jpg" mode="scaleToFill"></image></view>
            <view class="crder_text">手机电子维修，更换屏幕等手机电子维修</view>
            <view class="crder_subtext">专业工程师现场检测您的设备，并采取现场面对面的透明化维修模式，让您的设备不用返厂</view>
            <view class="crder_view">   <!--判断后台传数据1是默认，2是面议 3是免费 wx-if=""-->
@@ -43,7 +43,7 @@
                <!-- 开始服务一 -->
          <view class="crderconter">
           <navigator url="/pages/msgBoard/msgBoard" hover-class="navigator-hover">
-           <view class="crder_img"><image src="../../images/online/dianzi.jpg"></image></view>
+           <view class="crder_img"><image src="../../images/online/dianzi.jpg" mode="scaleToFill"></image></view>
            <view class="crder_text">手机电子维修，更换屏幕等手机电子维修</view>
            <view class="crder_subtext">专业工程师现场检测您的设备，并采取现场面对面的透明化维修模式，让您的设备不用返厂</view>
            <view class="crder_view">   <!--判断后台传数据1是默认，2是面议 3是免费 wx-if=""-->
@@ -60,7 +60,7 @@
              <!-- 开始服务一 -->
          <view class="crderconter">
           <navigator url="/pages/msgBoard/msgBoard" hover-class="navigator-hover">
-           <view class="crder_img"><image src="../../images/online/dianzi.jpg"></image></view>
+           <view class="crder_img"><image src="../../images/online/dianzi.jpg" mode="scaleToFill"></image></view>
            <view class="crder_text">手机电子维修，更换屏幕等手机电子维修</view>
            <view class="crder_subtext">专业工程师现场检测您的设备，并采取现场面对面的透明化维修模式，让您的设备不用返厂</view>
            <view class="crder_view">   <!--判断后台传数据1是默认，2是面议 3是免费 wx-if=""-->
